
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.95

   * much-improved support for raytracing of large structures;
     various bugs fixed

   * fixed memory management issues on OS-X

   * endianness check for .phi files 

   * test cases updated to reflect new molecular editing behavior

   * default arguments (and behavior) changed for dist and bond commands

   * pdb_standard_order now default on

   * textual button mode indicator, more button changes...

   * ray-tracing of RGBA pixmap text now supported FINALLY.

   * pk1-4 now have different visual representations...

   * fixed hydrogen adding for amides/ureas

   * changed PyMOL file output to comply with PDB standards with respect
     to placement of the atomic symbol in the atom name field

   * overhauled C0700 test case

   * pdb_reformat_names_mode setting (for PDB and AMBER conversions)

   * appearance wizard

   * toggle command
 
   * virtual_trackball setting

   * many new menus to support viewer pop-up actions

   * pop-up menus in viewer

   * cascading pop-up menus
   
   * made spheres pickable

   * made cartoons pickable using pickable CGOs : )))

   * finally fixed visible operator to behave as expected

   * massive overhaul of user interface appearance

   * double-clicking actions

   * scrolling actions

   * new selection operations 
      byfragment (byfrag, bf.) 
      bysegment (byseg, bs.)
      bymolecule (bymol, bm. )

   * added setting internal_gui_control_size so that users can decide how
     many lines of buttons they'd like to see.

   * revamped GUI, made buttons look like buttons

   * added ray_blend_colors setting to provide a simple way of